test/corpus/edge_cases.txt
================================================================
keywords used as identifiers
================================================================

stage S(
    in  int threads,
    in  int split,
    out int using,
    src py  "s",
)

---

(source_file
  (stage
    name: (identifier)
    (in_param
      type: (type
        (primitive_type))
      name: (identifier))
    (in_param
      type: (type
        (primitive_type))
      name: (identifier))
    (out_param
      type: (type
        (primitive_type))
      name: (identifier))
    (src_statement
      lang: (src_lang)
      cmd: (string))))

================================================================
memgb and vmemgb without underscore
================================================================

stage S(
    out int x,
    src py  "s",
) using (
    memgb  = 4,
    vmemgb = 8,
)

---

(source_file
  (stage
    name: (identifier)
    (out_param
      type: (type
        (primitive_type))
      name: (identifier))
    (src_statement
      lang: (src_lang)
      cmd: (string))
    (using_resources
      (resource
        (integer))
      (resource
        (integer)))))

================================================================
string with escapes
================================================================

pipeline P(out string x,)
{
    return (
        x = "tab\there \"quote\" \n \x41 \101 A",
    )
}

---

(source_file
  (pipeline
    name: (identifier)
    (out_param
      type: (type
        (primitive_type))
      name: (identifier))
    (return_statement
      (binding
        name: (identifier)
        (string)))))
