test/corpus/types_and_expressions.txt
==================
types, resources, map call, split
==================

stage S(
    in  map<int[]> m,
    in  bam[] files,
    out json result,
    src comp "s",
) using (
    mem_gb = 4,
    volatile = strict,
)

pipeline P(
    out int x,
)
{
    map call S(
        m = split [1, 2],
    )
    return (
        x = 5,
    )
}

---

(source_file
  (stage
    name: (identifier)
    (in_param
      type: (type
        (map_type
          (type
            (primitive_type)
            (array_suffix))))
      name: (identifier))
    (in_param
      type: (type
        (dotted_id
          (identifier))
        (array_suffix))
      name: (identifier))
    (out_param
      type: (type
        (dotted_id
          (identifier)))
      name: (identifier))
    (src_statement
      lang: (src_lang)
      cmd: (string))
    (using_resources
      (resource
        (integer))
      (resource)))
  (pipeline
    name: (identifier)
    (out_param
      type: (type
        (primitive_type))
      name: (identifier))
    (call
      callable: (identifier)
      (binding
        name: (identifier)
        (split_expr
          (array
            (integer)
            (integer)))))
    (return_statement
      (binding
        name: (identifier)
        (integer)))))
